Fix x-overflow and banner misalignment

--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@
     overflow-y: visible;
 }
 
-body {
+section {
     overflow-x: hidden;
 }
 
